package ve.com.teeac.mymarket.utils

object TestTags {
    const val RATE_FIELD = "RATE_FIELD"
    const val MAX_DOLLAR = "MAX_DOLLAR"
    const val MAX_BOLIVARES = "MAX_BOLIVARES"
    const val LIST_PRODUCT = "LIST_PRODUCT"
    const val DESCRIPTION_FIELD = "DESCRIPTION_FIELD"
    const val QUALITY_FIELD = "QUANTITY_FIELD"
    const val AMOUNT_BS_FIELD = "AMOUNT_BS_FIELD"
    const val AMOUNT_DOLLAR_FIELD = "AMOUNT_DOLLAR_FIELD"
    const val LIST_MARKETS = "LIST_MARKETS"
}