...
//                    style = MaterialTheme.typography.h5
                        fontSize = 16.sp,
                    )
                }
                Row(modifier = Modifier.fillMaxWidth()) {
                    Text(
                        text = "Por Unidad",
                        modifier = Modifier.weight(1f)
                    )

                    Text(
                        text = stringResource(
                            id = R.string.string_bs,
...
                        modifier = Modifier.weight(1f),
                        textAlign = TextAlign.End
                    )
                }
                Row {
                    Text(
                        text = "Total",
                        modifier = Modifier.weight(1f)
                    )

                    Text(
                        text = stringResource(
                            id = R.string.string_bs,
...
